fix(ui): new overflow on list member

--- a/src/assets/css/mixins.css
+++ b/src/assets/css/mixins.css
@@ -425,3 +425,24 @@
 
   background-color: var(--vote-empty);
 }
+
+@define-mixin overflow-dialog {
+  padding: 1rem 2rem 0;
+
+  & .title {
+    align-self: center;
+    color: #34314c;
+    font-family: 'Merriweather', serif;
+    font-size: 24px;
+    font-style: normal;
+    font-weight: normal;
+    line-height: 30px;
+    margin-bottom: 1.5rem;
+    margin-top: 0;
+  }
+
+  & .overflow {
+    max-height: 43vh;
+    overflow: auto;
+  }
+}
